public/analytics-pro/v0.16/_sources/reference/tmlt/analytics/metrics/index.rst.txt

..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024


**************
metrics
**************

.. py:module:: tmlt.analytics.metrics

.. autoapi-nested-parse::

   |PRO| Metrics to measure the quality of program outputs.

   Metrics are to be used in the context of program evaluation and error reporting,
   where the goal is to compare the outputs of a program to a set of expected
   outputs to determine the error. They are designed to be flexible and extensible,
   allowing users to combine them in various ways and define their own metrics.

   A number of pre-built metrics are provided, for example
   :class:`~.QuantileAbsoluteError`, :class:`~.HighRelativeErrorFraction`, and
   :class:`~.SpuriousRate`. Users can also define their own custom metrics using
   :class:`~.JoinedOutputMetric`, :class:`~.SingleOutputMetric`, or :class:`~.Metric`.

   Suppose we have a :class:`~.SessionProgram` that has one protected input and
   produces one output that is a count of the number of rows in the protected input.

   ..
       >>> import math
       >>> from typing import Dict, List
       >>> import pandas as pd
       >>> from pyspark.sql import DataFrame, SparkSession
       >>> import pyspark.sql.functions as sf
       >>> from tmlt.analytics.keyset import KeySet
       >>> from tmlt.analytics.metrics import MedianAbsoluteError
       >>> from tmlt.analytics.privacy_budget import PureDPBudget
       >>> from tmlt.analytics.program import SessionProgram
       >>> from tmlt.analytics.protected_change import AddOneRow
       >>> from tmlt.analytics.query_builder import QueryBuilder
       >>> from tmlt.analytics.session import Session
       >>> from tmlt.analytics.tuner import SessionProgramTuner, joined_output_metric
       >>> spark = SparkSession.builder.getOrCreate()

   >>> class MinimalProgram(SessionProgram):
   ...     class ProtectedInputs:
   ...         protected_df: DataFrame  # DataFrame type annotation is required
   ...     class Outputs:
   ...         count_per_a: DataFrame  # required here too
   ...     def session_interaction(self, session: Session):
   ...         a_keyset = KeySet.from_dict({"A": [1, 2, 3, 4]})
   ...         count_query = QueryBuilder("protected_df").groupby(a_keyset).count()
   ...         budget = self.privacy_budget  #  session.remaining_privacy_budget also works
   ...         count_per_a = session.evaluate(count_query, budget)
   ...         return {"count_per_a": count_per_a}

   We can pass this information to the :class:`~.tuner.SessionProgramTuner` class,
   which is what gives us access to error reports.

   We can measure the error of the program by comparing the program output to
   the expected output. Suppose we want to use a built-in metric: the median absolute
   error :class:`~.MedianAbsoluteError` and a custom metric: root mean squared error.
   We need to instantiate the metrics and include them in the list of metric
   associated with the ``metrics`` class variable.

   >>> protected_df = spark.createDataFrame(pd.DataFrame({"A": [1, 2, 2, 3, 3, 3, 4, 4, 4, 4]}))

   >>> class Tuner(SessionProgramTuner, program=MinimalProgram):
   ...     @joined_output_metric(name="root_mean_squared_error",
   ...             output="count_per_a",
   ...             join_columns=["A"],
   ...             description="Root mean squared error for column count of count_per_a")
   ...     def compute_rmse(
   ...         joined_output: DataFrame,
   ...         result_column_name: str,
   ...     ):
   ...         err = sf.col("count_dp") - sf.col("count_baseline")
   ...         rmse = joined_output.agg(
   ...             sf.sqrt(sf.avg(sf.pow(err, sf.lit(2)))).alias(result_column_name))
   ...         return rmse.head(1)[0][result_column_name]
   ...
   ...     metrics = [
   ...         MedianAbsoluteError(output="count_per_a", measure_column="count", join_columns=["A"]),
   ...     ]
   >>> tuner = (
   ...    Tuner.Builder()
   ...    .with_privacy_budget(PureDPBudget(epsilon=1))
   ...    .with_private_dataframe("protected_df", protected_df, AddOneRow())
   ...    .build()
   ... )

   Now that our SessionProgramTuner is initialized, we can get our very first error
   report by calling the :meth:`~.tuner.SessionProgramTuner.error_report()` method.

   >>> error_report = tuner.error_report()
   >>> error_report.dp_outputs["count_per_a"].show()  # doctest: +SKIP
   +---+-----+
   |  A|count|
   +---+-----+
   |  1|    2|
   |  2|    2|
   |  3|    5|
   |  4|    3|
   +---+-----+
   >>> error_report.baseline_outputs["default"]["count_per_a"].show()  # doctest: +SKIP
   +---+-----+
   |  A|count|
   +---+-----+
   |  1|    1|
   |  2|    2|
   |  3|    3|
   |  4|    4|
   +---+-----+
   >>> error_report.show()  # doctest: +SKIP
   Error report ran with budget PureDPBudget(epsilon=1) and no tunable parameters and no additional parameters
   <BLANKLINE>
   Metric results:
   Metric results:
   +---------+-------------------------+------------+-------------------------------------------------------------+
   |   Value | Metric                  | Baseline   | Description                                                 |
   +=========+=========================+============+=============================================================+
   |       0 | mae                     | default    | Median absolute error for column count of table count_per_a |
   +---------+-------------------------+------------+-------------------------------------------------------------+
   |       0 | root_mean_squared_error | default    | Root mean squared error                                     |
   +---------+-------------------------+------------+-------------------------------------------------------------+

   More illustrated examples of how to define and use metrics can be found in the
   :ref:`Basics of error measurement` and :ref:`Specifying error metrics`
   tutorials.











Classes
=======

.. list-table::

   * - :class:`.QuantileAbsoluteError`
     - Computes the quantile of the empirical absolute error.
   * - :class:`.MedianAbsoluteError`
     - Computes the median absolute error.
   * - :class:`.QuantileRelativeError`
     - Computes the quantile of the empirical relative error.
   * - :class:`.MedianRelativeError`
     - Computes the median relative error.
   * - :class:`.HighRelativeErrorFraction`
     - Computes the fraction of groups with relative error above a threshold.
   * - :class:`.SpuriousRate`
     - Computes the fraction of groups in the DP output but not in the baseline output.
   * - :class:`.SuppressionRate`
     - Computes the fraction of groups in the baseline output but not in the DP output.
   * - :class:`.Metric`
     - A generic metric defined using a function.
   * - :class:`.SingleOutputMetric`
     - A metric computed from a single output table, defined using a function.
   * - :class:`.JoinedOutputMetric`
     - A metric computed from a join between a single DP and baseline output.
   * - :class:`.MetricResult`
     - An output of a Metric with additional metadata.

   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024

.. TODO(#3272): This prevents setting :canonical: on the copy of various docs
       that appear in the deprecated query_expr module; once that module is removed,
       this logic can go away.


.. py:class:: QuantileAbsoluteError(quantile, measure_column, join_columns, grouping_columns = None, *, name = None, description = None, baseline = None, output = None)
   :canonical: tmlt.analytics.metrics._absolute_error.QuantileAbsoluteError


   Bases: :py:obj:`tmlt.analytics.metrics._base.JoinedOutputMetric`

   Computes the quantile of the empirical absolute error.

   .. note::

       |PRO_NOTE|

   How it works:

   1. The algorithm takes as input two tables: one representing the differentially
      private (DP) output and the other representing the baseline output.

      **DP Table (dp)**: This table contains the output data generated by a
      differentially private mechanism.

      **Baseline Table (baseline)**: This table contains the output data generated by a
      non-private or baseline mechanism. It serves as a reference point for comparison
      with the DP output.

      The algorithm includes error handling to ensure the validity of the input data.
      It checks for the existence and numeric type of the ``measure_column``.

      The algorithm performs an inner join between the DP and baseline tables based on
      ``join_columns``. This join must be one-to-one, with each row in the DP table
      matching exactly one row in the baseline table, and vice versa.
      This ensures that there is a direct correspondence between the DP and baseline
      outputs for each entity, allowing for accurate comparison.

   2. After performing the join, the algorithm computes the absolute error for each
      group. Absolute error is calculated as the absolute difference between the
      corresponding values in the DP and baseline outputs using the formula
      :math:`abs(dp - baseline)`.

   3. The algorithm then calculates the n-th quantile of the absolute error across all
      groups.

      The algorithm handles cases where the quantile computation may result in an empty
      column, returning a NaN (not a number) value in such scenarios.

       .. note::
           * Provided algorithm assumes a one-to-one join scenario.
           * Nulls in the measure columns are dropped because the metric cannot
             handle null values, and the absolute error computation requires valid
             numeric values in both columns.

   .. rubric:: Example

   ..
       >>> import pandas as pd
       >>> from pyspark.sql import SparkSession
       >>> from tmlt.analytics.metrics import QuantileAbsoluteError
       >>> spark = SparkSession.builder.getOrCreate()

   >>> dp_df = spark.createDataFrame(
   ...     pd.DataFrame(
   ...         {
   ...             "A": ["a1", "a2", "a3"],
   ...             "X": [50, 110, 100]
   ...         }
   ...     )
   ... )
   >>> dp_outputs = {"O": dp_df}
   >>> baseline_df = spark.createDataFrame(
   ...     pd.DataFrame(
   ...         {
   ...             "A": ["a1", "a2", "a3"],
   ...             "X": [100, 100, 100]
   ...         }
   ...     )
   ... )
   >>> baseline_outputs = {"default": {"O": baseline_df}}

   >>> metric = QuantileAbsoluteError(
   ...     quantile=0.5,
   ...     measure_column="X",
   ...     join_columns=["A"]
   ... )
   >>> metric.quantile
   0.5
   >>> metric.join_columns
   ['A']
   >>> result = metric(dp_outputs, baseline_outputs).value
   >>> result
   10



   .. list-table:: Properties

      * - :attr:`name`
        - Returns the name of the metric.
      * - :attr:`description`
        - Returns the description of the metric.
      * - :attr:`quantile`
        - Returns the quantile.
      * - :attr:`join_columns`
        - Returns the name of the join columns.
      * - :attr:`indicator_column_name`
        - Returns the name of the indicator column.
      * - :attr:`baseline`
        - Return the name of the baseline specified in the constructor (if any).
      * - :attr:`output`
        - Return the name of the output specified in the constructor (if any).
      * - :attr:`func`
        - Returns function to be applied.
      * - :attr:`grouping_columns`
        - Returns the grouping columns.
      * - :attr:`measure_column`
        - Returns the measure column (if any).
      * - :attr:`empty_value`
        - The value this metric will return when inputs are empty.

   .. list-table:: Methods

      * - :meth:`.compute_qae`
        - Computes quantile relative error value from grouped dataframe.
      * - :meth:`.required_func_parameters`
        - Return the required parameters to the metric function.
      * - :meth:`.check_compatibility_with_outputs`
        - Check that a particular set of outputs is compatible with the metric.
      * - :meth:`.check_join_key_uniqueness`
        - Check if the join keys uniquely identify rows in the joined DataFrame.
      * - :meth:`.get_parameter_values`
        - Returns values for the function's parameters.
      * - :meth:`.metric_function_inputs_empty`
        - Determines if the given inputs are empty.
      * - :meth:`.get_baseline`
        - Returns the name of the single baseline this metric will be applied to.
      * - :meth:`.get_output`
        - Returns the name of the single output the metric will be applied to.
      * - :meth:`.get_column_name_from_result`
        - Returns the result column name from the given result.
      * - :meth:`.get_column_name_from_baselines`
        - Get the result column name for a given set of outputs.
      * - :meth:`.check_compatibility_with_data`
        - Check that the outputs have all the structure the metric expects.
      * - :meth:`.__call__`
        - Computes the given metric on the given DP and baseline outputs.
      * - :meth:`.format_as_summary_row`
        - Return a table row summarizing the metric result.
      * - :meth:`.format_as_dataframe`
        - Returns the results of this metric formatted as a dataframe.
      * - :meth:`.optional_func_parameters`
        - Return the optional parameters to the metric function.
      * - :meth:`.validate_result`
        - Check that the metric result is an allowed type.




   .. py:property:: name
      :type: str

      Returns the name of the metric.

   .. py:property:: description
      :type: str

      Returns the description of the metric.

   .. py:property:: quantile
      :type: float

      Returns the quantile.

   .. py:property:: join_columns
      :type: List[str]

      Returns the name of the join columns.

   .. py:property:: indicator_column_name
      :type: Optional[str]

      Returns the name of the indicator column.

   .. py:property:: baseline
      :type: Optional[str]

      Return the name of the baseline specified in the constructor (if any).

   .. py:property:: output
      :type: Optional[str]

      Return the name of the output specified in the constructor (if any).

   .. py:property:: func
      :type: Callable

      Returns function to be applied.

   .. py:property:: grouping_columns
      :type: List[str]

      Returns the grouping columns.

   .. py:property:: measure_column
      :type: Optional[str]

      Returns the measure column (if any).

   .. py:property:: empty_value
      :type: Any

      The value this metric will return when inputs are empty.


   .. automethod:: __init__
   .. py:method:: compute_qae(joined_output, result_column_name)

      Computes quantile relative error value from grouped dataframe.


   .. py:method:: required_func_parameters()

      Return the required parameters to the metric function.


   .. py:method:: check_compatibility_with_outputs(outputs, output_type)

      Check that a particular set of outputs is compatible with the metric.

      Should throw a ValueError if the metric is not compatible.


   .. py:method:: check_join_key_uniqueness(joined_output)

      Check if the join keys uniquely identify rows in the joined DataFrame.


   .. py:method:: get_parameter_values(dp_outputs, baseline_outputs, unprotected_inputs, program_parameters)

      Returns values for the function's parameters.


   .. py:method:: metric_function_inputs_empty(function_params)

      Determines if the given inputs are empty.


   .. py:method:: get_baseline(baseline_outputs)

      Returns the name of the single baseline this metric will be applied to.


   .. py:method:: get_output(outputs)

      Returns the name of the single output the metric will be applied to.


   .. py:method:: get_column_name_from_result(result)

      Returns the result column name from the given result.


   .. py:method:: get_column_name_from_baselines(baseline_outputs)

      Get the result column name for a given set of outputs.


   .. py:method:: check_compatibility_with_data(dp_outputs, baseline_outputs)

      Check that the outputs have all the structure the metric expects.

      Should throw a ValueError if the metric is not compatible.


   .. py:method:: __call__(dp_outputs, baseline_outputs, unprotected_inputs = None, program_parameters = None)

      Computes the given metric on the given DP and baseline outputs.

      :param dp_outputs: The differentially private outputs of the program.
      :param baseline_outputs: The outputs of the baseline programs.
      :param unprotected_inputs: Optional public dataframes used in error computation.
      :param program_parameters: Optional program specific parameters used in
                                 error computation.


   .. py:method:: format_as_summary_row(result)

      Return a table row summarizing the metric result.


   .. py:method:: format_as_dataframe(result)

      Returns the results of this metric formatted as a dataframe.


   .. py:method:: optional_func_parameters()

      Return the optional parameters to the metric function.


   .. py:method:: validate_result(result, baseline_outputs)

      Check that the metric result is an allowed type.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024

.. TODO(#3272): This prevents setting :canonical: on the copy of various docs
       that appear in the deprecated query_expr module; once that module is removed,
       this logic can go away.


.. py:class:: MedianAbsoluteError(measure_column, join_columns, grouping_columns = None, *, name = None, description = None, baseline = None, output = None)
   :canonical: tmlt.analytics.metrics._absolute_error.MedianAbsoluteError


   Bases: :py:obj:`QuantileAbsoluteError`

   Computes the median absolute error.

   Equivalent to :class:`QuantileAbsoluteError` with ``quantile = 0.5``.

   .. note::

       |PRO_NOTE|

   .. rubric:: Example

   ..
       >>> import pandas as pd
       >>> from pyspark.sql import SparkSession
       >>> from tmlt.analytics.metrics import MedianAbsoluteError
       >>> spark = SparkSession.builder.getOrCreate()
       >>> dp_df = spark.createDataFrame(
       ...     pd.DataFrame(
       ...         {
       ...             "A": ["a1", "a2", "a3"],
       ...             "X": [50, 110, 100]
       ...         }
       ...     )
       ... )

   >>> dp_outputs = {"O": dp_df}
   >>> baseline_df = spark.createDataFrame(
   ...     pd.DataFrame(
   ...         {
   ...             "A": ["a1", "a2", "a3"],
   ...             "X": [100, 100, 100]
   ...         }
   ...     )
   ... )
   >>> baseline_outputs = {"default": {"O": baseline_df}}

   >>> metric = MedianAbsoluteError(
   ...     measure_column="X",
   ...     join_columns=["A"]
   ... )
   >>> metric.quantile
   0.5
   >>> metric.join_columns
   ['A']
   >>> result = metric(dp_outputs, baseline_outputs).value
   >>> result
   10



   .. list-table:: Properties

      * - :attr:`name`
        - Returns the name of the metric.
      * - :attr:`description`
        - Returns the description of the metric.
      * - :attr:`quantile`
        - Returns the quantile.
      * - :attr:`join_columns`
        - Returns the name of the join columns.
      * - :attr:`indicator_column_name`
        - Returns the name of the indicator column.
      * - :attr:`baseline`
        - Return the name of the baseline specified in the constructor (if any).
      * - :attr:`output`
        - Return the name of the output specified in the constructor (if any).
      * - :attr:`func`
        - Returns function to be applied.
      * - :attr:`grouping_columns`
        - Returns the grouping columns.
      * - :attr:`measure_column`
        - Returns the measure column (if any).
      * - :attr:`empty_value`
        - The value this metric will return when inputs are empty.

   .. list-table:: Methods

      * - :meth:`.compute_qae`
        - Computes quantile relative error value from grouped dataframe.
      * - :meth:`.required_func_parameters`
        - Return the required parameters to the metric function.
      * - :meth:`.check_compatibility_with_outputs`
        - Check that a particular set of outputs is compatible with the metric.
      * - :meth:`.check_join_key_uniqueness`
        - Check if the join keys uniquely identify rows in the joined DataFrame.
      * - :meth:`.get_parameter_values`
        - Returns values for the function's parameters.
      * - :meth:`.metric_function_inputs_empty`
        - Determines if the given inputs are empty.
      * - :meth:`.get_baseline`
        - Returns the name of the single baseline this metric will be applied to.
      * - :meth:`.get_output`
        - Returns the name of the single output the metric will be applied to.
      * - :meth:`.get_column_name_from_result`
        - Returns the result column name from the given result.
      * - :meth:`.get_column_name_from_baselines`
        - Get the result column name for a given set of outputs.
      * - :meth:`.check_compatibility_with_data`
        - Check that the outputs have all the structure the metric expects.
      * - :meth:`.__call__`
        - Computes the given metric on the given DP and baseline outputs.
      * - :meth:`.format_as_summary_row`
        - Return a table row summarizing the metric result.
      * - :meth:`.format_as_dataframe`
        - Returns the results of this metric formatted as a dataframe.
      * - :meth:`.optional_func_parameters`
        - Return the optional parameters to the metric function.
      * - :meth:`.validate_result`
        - Check that the metric result is an allowed type.




   .. py:property:: name
      :type: str

      Returns the name of the metric.

   .. py:property:: description
      :type: str

      Returns the description of the metric.

   .. py:property:: quantile
      :type: float

      Returns the quantile.

   .. py:property:: join_columns
      :type: List[str]

      Returns the name of the join columns.

   .. py:property:: indicator_column_name
      :type: Optional[str]

      Returns the name of the indicator column.

   .. py:property:: baseline
      :type: Optional[str]

      Return the name of the baseline specified in the constructor (if any).

   .. py:property:: output
      :type: Optional[str]

      Return the name of the output specified in the constructor (if any).

   .. py:property:: func
      :type: Callable

      Returns function to be applied.

   .. py:property:: grouping_columns
      :type: List[str]

      Returns the grouping columns.

   .. py:property:: measure_column
      :type: Optional[str]

      Returns the measure column (if any).

   .. py:property:: empty_value
      :type: Any

      The value this metric will return when inputs are empty.


   .. automethod:: __init__
   .. py:method:: compute_qae(joined_output, result_column_name)

      Computes quantile relative error value from grouped dataframe.


   .. py:method:: required_func_parameters()

      Return the required parameters to the metric function.


   .. py:method:: check_compatibility_with_outputs(outputs, output_type)

      Check that a particular set of outputs is compatible with the metric.

      Should throw a ValueError if the metric is not compatible.


   .. py:method:: check_join_key_uniqueness(joined_output)

      Check if the join keys uniquely identify rows in the joined DataFrame.


   .. py:method:: get_parameter_values(dp_outputs, baseline_outputs, unprotected_inputs, program_parameters)

      Returns values for the function's parameters.


   .. py:method:: metric_function_inputs_empty(function_params)

      Determines if the given inputs are empty.


   .. py:method:: get_baseline(baseline_outputs)

      Returns the name of the single baseline this metric will be applied to.


   .. py:method:: get_output(outputs)

      Returns the name of the single output the metric will be applied to.


   .. py:method:: get_column_name_from_result(result)

      Returns the result column name from the given result.


   .. py:method:: get_column_name_from_baselines(baseline_outputs)

      Get the result column name for a given set of outputs.


   .. py:method:: check_compatibility_with_data(dp_outputs, baseline_outputs)

      Check that the outputs have all the structure the metric expects.

      Should throw a ValueError if the metric is not compatible.


   .. py:method:: __call__(dp_outputs, baseline_outputs, unprotected_inputs = None, program_parameters = None)

      Computes the given metric on the given DP and baseline outputs.

      :param dp_outputs: The differentially private outputs of the program.
      :param baseline_outputs: The outputs of the baseline programs.
      :param unprotected_inputs: Optional public dataframes used in error computation.
      :param program_parameters: Optional program specific parameters used in
                                 error computation.


   .. py:method:: format_as_summary_row(result)

      Return a table row summarizing the metric result.


   .. py:method:: format_as_dataframe(result)

      Returns the results of this metric formatted as a dataframe.


   .. py:method:: optional_func_parameters()

      Return the optional parameters to the metric function.


   .. py:method:: validate_result(result, baseline_outputs)

      Check that the metric result is an allowed type.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024

.. TODO(#3272): This prevents setting :canonical: on the copy of various docs
       that appear in the deprecated query_expr module; once that module is removed,
       this logic can go away.


.. py:class:: QuantileRelativeError(quantile, measure_column, join_columns, grouping_columns = None, *, name = None, description = None, baseline = None, output = None)
   :canonical: tmlt.analytics.metrics._relative_error.QuantileRelativeError


   Bases: :py:obj:`tmlt.analytics.metrics._base.JoinedOutputMetric`

   Computes the quantile of the empirical relative error.

   .. note::

       |PRO_NOTE|

   How it works:

   1. The algorithm takes as input two tables: one representing the differentially
      private (DP) output and the other representing the baseline output.

      **DP Table (dp)**: This table contains the output data generated by a
      differentially private mechanism.

      **Baseline Table (baseline)**: This table contains the output data generated by a
      non-private or baseline mechanism. It serves as a reference point for comparison
      with the DP output.

      The algorithm includes error handling to ensure the validity of the input data.
      It checks for the existence and numeric type of the ``measure_column``.

      The algorithm performs an inner join between the DP and baseline tables based on
      ``join_columns`` to produce the combined dataframe. This join must be one-to-one,
      with each row in the DP table matches exactly one row in the baseline table, and
      vice versa. This ensures that there is a direct correspondence between the DP and
      baseline outputs for each entity, allowing for accurate comparison.

   2. After performing the join, the algorithm computes the relative error for each
      group. Relative error is calculated as the absolute difference between the
      corresponding values in the DP and baseline outputs to the value in the baseline
      using the formula :math:`abs(dp - baseline) / baseline`.
      If baseline is zero, it returns infinity for non-zero differences (:math:`∞`) and
      zero for zero differences (:math:`0`).

   3. The algorithm then calculates the n-th quantile of the relative error across all
      groups.

      The algorithm handles cases where the quantile computation may result in an empty
      column, returning a NaN (not a number) value in such scenarios.

       .. note::
           * Provided algorithm assumes a one-to-one join scenario.
           * Nulls in the measure columns are dropped because the metric cannot
             handle null values, and the absolute error computation requires valid
             numeric values in both columns.


   .. rubric:: Example

   ..
       >>> import pandas as pd
       >>> from pyspark.sql import SparkSession
       >>> from tmlt.analytics.metrics import QuantileRelativeError
       >>> spark = SparkSession.builder.getOrCreate()

   >>> dp_df = spark.createDataFrame(
   ...     pd.DataFrame(
   ...         {
   ...             "A": ["a1", "a2", "a3"],
   ...             "X": [50, 110, 100]
   ...         }
   ...     )
   ... )
   >>> dp_outputs = {"O": dp_df}
   >>> baseline_df = spark.createDataFrame(
   ...     pd.DataFrame(
   ...         {
   ...             "A": ["a1", "a2", "a3"],
   ...             "X": [100, 100, 100]
   ...         }
   ...     )
   ... )
   >>> baseline_outputs = {"default": {"O": baseline_df}}

   >>> metric = QuantileRelativeError(
   ...     quantile=0.5,
   ...     measure_column="X",
   ...     join_columns=["A"]
   ... )
   >>> metric.quantile
   0.5
   >>> metric.join_columns
   ['A']
   >>> result = metric(dp_outputs, baseline_outputs).value
   >>> result
   0.1



   .. list-table:: Properties

      * - :attr:`name`
        - Returns the name of the metric.
      * - :attr:`description`
        - Returns the description of the metric.
      * - :attr:`quantile`
        - Returns the quantile.
      * - :attr:`join_columns`
        - Returns the name of the join columns.
      * - :attr:`indicator_column_name`
        - Returns the name of the indicator column.
      * - :attr:`baseline`
        - Return the name of the baseline specified in the constructor (if any).
      * - :attr:`output`
        - Return the name of the output specified in the constructor (if any).
      * - :attr:`func`
        - Returns function to be applied.
      * - :attr:`grouping_columns`
        - Returns the grouping columns.
      * - :attr:`measure_column`
        - Returns the measure column (if any).
      * - :attr:`empty_value`
        - The value this metric will return when inputs are empty.

   .. list-table:: Methods

      * - :meth:`.compute_qre`
        - Computes quantile relative error value from grouped dataframe.
      * - :meth:`.required_func_parameters`
        - Return the required parameters to the metric function.
      * - :meth:`.check_compatibility_with_outputs`
        - Check that a particular set of outputs is compatible with the metric.
      * - :meth:`.check_join_key_uniqueness`
        - Check if the join keys uniquely identify rows in the joined DataFrame.
      * - :meth:`.get_parameter_values`
        - Returns values for the function's parameters.
      * - :meth:`.metric_function_inputs_empty`
        - Determines if the given inputs are empty.
      * - :meth:`.get_baseline`
        - Returns the name of the single baseline this metric will be applied to.
      * - :meth:`.get_output`
        - Returns the name of the single output the metric will be applied to.
      * - :meth:`.get_column_name_from_result`
        - Returns the result column name from the given result.
      * - :meth:`.get_column_name_from_baselines`
        - Get the result column name for a given set of outputs.
      * - :meth:`.check_compatibility_with_data`
        - Check that the outputs have all the structure the metric expects.
      * - :meth:`.__call__`
        - Computes the given metric on the given DP and baseline outputs.
      * - :meth:`.format_as_summary_row`
        - Return a table row summarizing the metric result.
      * - :meth:`.format_as_dataframe`
        - Returns the results of this metric formatted as a dataframe.
      * - :meth:`.optional_func_parameters`
        - Return the optional parameters to the metric function.
      * - :meth:`.validate_result`
        - Check that the metric result is an allowed type.




   .. py:property:: name
      :type: str

      Returns the name of the metric.

   .. py:property:: description
      :type: str

      Returns the description of the metric.

   .. py:property:: quantile
      :type: float

      Returns the quantile.

   .. py:property:: join_columns
      :type: List[str]

      Returns the name of the join columns.

   .. py:property:: indicator_column_name
      :type: Optional[str]

      Returns the name of the indicator column.

   .. py:property:: baseline
      :type: Optional[str]

      Return the name of the baseline specified in the constructor (if any).

   .. py:property:: output
      :type: Optional[str]

      Return the name of the output specified in the constructor (if any).

   .. py:property:: func
      :type: Callable

      Returns function to be applied.

   .. py:property:: grouping_columns
      :type: List[str]

      Returns the grouping columns.

   .. py:property:: measure_column
      :type: Optional[str]

      Returns the measure column (if any).

   .. py:property:: empty_value
      :type: Any

      The value this metric will return when inputs are empty.


   .. automethod:: __init__
   .. py:method:: compute_qre(joined_output, result_column_name)

      Computes quantile relative error value from grouped dataframe.


   .. py:method:: required_func_parameters()

      Return the required parameters to the metric function.


   .. py:method:: check_compatibility_with_outputs(outputs, output_type)

      Check that a particular set of outputs is compatible with the metric.

      Should throw a ValueError if the metric is not compatible.


   .. py:method:: check_join_key_uniqueness(joined_output)

      Check if the join keys uniquely identify rows in the joined DataFrame.


   .. py:method:: get_parameter_values(dp_outputs, baseline_outputs, unprotected_inputs, program_parameters)

      Returns values for the function's parameters.


   .. py:method:: metric_function_inputs_empty(function_params)

      Determines if the given inputs are empty.


   .. py:method:: get_baseline(baseline_outputs)

      Returns the name of the single baseline this metric will be applied to.


   .. py:method:: get_output(outputs)

      Returns the name of the single output the metric will be applied to.


   .. py:method:: get_column_name_from_result(result)

      Returns the result column name from the given result.


   .. py:method:: get_column_name_from_baselines(baseline_outputs)

      Get the result column name for a given set of outputs.


   .. py:method:: check_compatibility_with_data(dp_outputs, baseline_outputs)

      Check that the outputs have all the structure the metric expects.

      Should throw a ValueError if the metric is not compatible.


   .. py:method:: __call__(dp_outputs, baseline_outputs, unprotected_inputs = None, program_parameters = None)

      Computes the given metric on the given DP and baseline outputs.

      :param dp_outputs: The differentially private outputs of the program.
      :param baseline_outputs: The outputs of the baseline programs.
      :param unprotected_inputs: Optional public dataframes used in error computation.
      :param program_parameters: Optional program specific parameters used in
                                 error computation.


   .. py:method:: format_as_summary_row(result)

      Return a table row summarizing the metric result.


   .. py:method:: format_as_dataframe(result)

      Returns the results of this metric formatted as a dataframe.


   .. py:method:: optional_func_parameters()

      Return the optional parameters to the metric function.


   .. py:method:: validate_result(result, baseline_outputs)

      Check that the metric result is an allowed type.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024

.. TODO(#3272): This prevents setting :canonical: on the copy of various docs
       that appear in the deprecated query_expr module; once that module is removed,
       this logic can go away.


.. py:class:: MedianRelativeError(measure_column, join_columns, grouping_columns = None, *, name = None, description = None, baseline = None, output = None)
   :canonical: tmlt.analytics.metrics._relative_error.MedianRelativeError


   Bases: :py:obj:`QuantileRelativeError`

   Computes the median relative error.

   Equivalent to :class:`QuantileRelativeError` with ``quantile = 0.5``.

   .. note::

       |PRO_NOTE|

   .. rubric:: Example

   ..
       >>> import pandas as pd
       >>> from pyspark.sql import SparkSession
       >>> from tmlt.analytics.metrics import MedianRelativeError
       >>> spark = SparkSession.builder.getOrCreate()

   >>> dp_df = spark.createDataFrame(
   ...     pd.DataFrame(
   ...         {
   ...             "A": ["a1", "a2", "a3"],
   ...             "X": [50, 110, 100]
   ...         }
   ...     )
   ... )
   >>> dp_outputs = {"O": dp_df}
   >>> baseline_df = spark.createDataFrame(
   ...     pd.DataFrame(
   ...         {
   ...             "A": ["a1", "a2", "a3"],
   ...             "X": [100, 100, 100]
   ...         }
   ...     )
   ... )
   >>> baseline_outputs = {"default": {"O": baseline_df}}

   >>> metric = MedianRelativeError(
   ...     measure_column="X",
   ...     join_columns=["A"]
   ... )
   >>> metric.quantile
   0.5
   >>> metric.join_columns
   ['A']
   >>> result = metric(dp_outputs, baseline_outputs).value
   >>> result
   0.1



   .. list-table:: Properties

      * - :attr:`name`
        - Returns the name of the metric.
      * - :attr:`description`
        - Returns the description of the metric.
      * - :attr:`quantile`
        - Returns the quantile.
      * - :attr:`join_columns`
        - Returns the name of the join columns.
      * - :attr:`indicator_column_name`
        - Returns the name of the indicator column.
      * - :attr:`baseline`
        - Return the name of the baseline specified in the constructor (if any).
      * - :attr:`output`
        - Return the name of the output specified in the constructor (if any).
      * - :attr:`func`
        - Returns function to be applied.
      * - :attr:`grouping_columns`
        - Returns the grouping columns.
      * - :attr:`measure_column`
        - Returns the measure column (if any).
      * - :attr:`empty_value`
        - The value this metric will return when inputs are empty.

   .. list-table:: Methods

      * - :meth:`.compute_qre`
        - Computes quantile relative error value from grouped dataframe.
      * - :meth:`.required_func_parameters`
        - Return the required parameters to the metric function.
      * - :meth:`.check_compatibility_with_outputs`
        - Check that a particular set of outputs is compatible with the metric.
      * - :meth:`.check_join_key_uniqueness`
        - Check if the join keys uniquely identify rows in the joined DataFrame.
      * - :meth:`.get_parameter_values`
        - Returns values for the function's parameters.
      * - :meth:`.metric_function_inputs_empty`
        - Determines if the given inputs are empty.
      * - :meth:`.get_baseline`
        - Returns the name of the single baseline this metric will be applied to.
      * - :meth:`.get_output`
        - Returns the name of the single output the metric will be applied to.
      * - :meth:`.get_column_name_from_result`
        - Returns the result column name from the given result.
      * - :meth:`.get_column_name_from_baselines`
        - Get the result column name for a given set of outputs.
      * - :meth:`.check_compatibility_with_data`
        - Check that the outputs have all the structure the metric expects.
      * - :meth:`.__call__`
        - Computes the given metric on the given DP and baseline outputs.
      * - :meth:`.format_as_summary_row`
        - Return a table row summarizing the metric result.
      * - :meth:`.format_as_dataframe`
        - Returns the results of this metric formatted as a dataframe.
      * - :meth:`.optional_func_parameters`
        - Return the optional parameters to the metric function.
      * - :meth:`.validate_result`
        - Check that the metric result is an allowed type.




   .. py:property:: name
      :type: str

      Returns the name of the metric.

   .. py:property:: description
      :type: str

      Returns the description of the metric.

   .. py:property:: quantile
      :type: float

      Returns the quantile.

   .. py:property:: join_columns
      :type: List[str]

      Returns the name of the join columns.

   .. py:property:: indicator_column_name
      :type: Optional[str]

      Returns the name of the indicator column.

   .. py:property:: baseline
      :type: Optional[str]

      Return the name of the baseline specified in the constructor (if any).

   .. py:property:: output
      :type: Optional[str]

      Return the name of the output specified in the constructor (if any).

   .. py:property:: func
      :type: Callable

      Returns function to be applied.

   .. py:property:: grouping_columns
      :type: List[str]

      Returns the grouping columns.

   .. py:property:: measure_column
      :type: Optional[str]

      Returns the measure column (if any).

   .. py:property:: empty_value
      :type: Any

      The value this metric will return when inputs are empty.


   .. automethod:: __init__
   .. py:method:: compute_qre(joined_output, result_column_name)

      Computes quantile relative error value from grouped dataframe.


   .. py:method:: required_func_parameters()

      Return the required parameters to the metric function.


   .. py:method:: check_compatibility_with_outputs(outputs, output_type)

      Check that a particular set of outputs is compatible with the metric.

      Should throw a ValueError if the metric is not compatible.


   .. py:method:: check_join_key_uniqueness(joined_output)

      Check if the join keys uniquely identify rows in the joined DataFrame.


   .. py:method:: get_parameter_values(dp_outputs, baseline_outputs, unprotected_inputs, program_parameters)

      Returns values for the function's parameters.


   .. py:method:: metric_function_inputs_empty(function_params)

      Determines if the given inputs are empty.


   .. py:method:: get_baseline(baseline_outputs)

      Returns the name of the single baseline this metric will be applied to.


   .. py:method:: get_output(outputs)

      Returns the name of the single output the metric will be applied to.


   .. py:method:: get_column_name_from_result(result)

      Returns the result column name from the given result.


   .. py:method:: get_column_name_from_baselines(baseline_outputs)

      Get the result column name for a given set of outputs.


   .. py:method:: check_compatibility_with_data(dp_outputs, baseline_outputs)

      Check that the outputs have all the structure the metric expects.

      Should throw a ValueError if the metric is not compatible.


   .. py:method:: __call__(dp_outputs, baseline_outputs, unprotected_inputs = None, program_parameters = None)

      Computes the given metric on the given DP and baseline outputs.

      :param dp_outputs: The differentially private outputs of the program.
      :param baseline_outputs: The outputs of the baseline programs.
      :param unprotected_inputs: Optional public dataframes used in error computation.
      :param program_parameters: Optional program specific parameters used in
                                 error computation.


   .. py:method:: format_as_summary_row(result)

      Return a table row summarizing the metric result.


   .. py:method:: format_as_dataframe(result)

      Returns the results of this metric formatted as a dataframe.


   .. py:method:: optional_func_parameters()

      Return the optional parameters to the metric function.


   .. py:method:: validate_result(result, baseline_outputs)

      Check that the metric result is an allowed type.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024

.. TODO(#3272): This prevents setting :canonical: on the copy of various docs
       that appear in the deprecated query_expr module; once that module is removed,
       this logic can go away.


.. py:class:: HighRelativeErrorFraction(relative_error_threshold, measure_column, join_columns, grouping_columns = None, *, name = None, description = None, baseline = None, output = None)
   :canonical: tmlt.analytics.metrics._relative_error.HighRelativeErrorFraction


   Bases: :py:obj:`tmlt.analytics.metrics._base.JoinedOutputMetric`

   Computes the fraction of groups with relative error above a threshold.

   .. note::

       |PRO_NOTE|

   How it works:


   1. The algorithm takes as input two tables: one representing the differentially
      private (DP) output and the other representing the baseline output.

      **DP Table (dp)**: This table contains the output data generated by a
      differentially private mechanism.

      **Baseline Table (baseline)**: This table contains the output data generated by a
      non-private or baseline mechanism. It serves as a reference point for comparison
      with the DP output.

      The algorithm includes error handling to ensure the validity of the input data.
      It checks for the existence and numeric type of the ``measure_column``.

      The algorithm performs an inner join between the DP and baseline tables based on
      ``join_columns`` to produce the combined dataframe. This join must be one-to-one,
      with each row in the DP table matches exactly one row in the baseline table, and
      vice versa. This ensures that there is a direct correspondence between the DP and
      baseline outputs for each entity, allowing for accurate comparison.

   2. After performing the join, the algorithm computes the relative error for each
      group. Relative error is calculated as the absolute difference between the
      corresponding values in the DP and baseline outputs to the value in the baseline
      using the formula :math:`abs(dp - baseline) / baseline`.
      If baseline is zero, it returns infinity for non-zero differences (:math:`∞`) and
      zero for zero differences (:math:`0`).

   3. Next, the algorithm filters the relative error dataframe to include only those
      data points where the relative error exceeds a specified threshold
      (``relative_error_threshold``). This threshold represents the maximum allowable
      relative error for a data point to be considered within acceptable bounds.

   4. Finally, the algorithm then calculates the high relative error fraction by
      dividing the count of data points with relative errors exceeding the threshold by
      the total count of data points in the dataframe.

      The algorithm handles cases where the resulting dataframe after relative error
      computation is empty (i.e., it contains no data points), returning a NaN
      (not a number) value in such scenarios.

       .. note::
           * Provided algorithm assumes a one-to-one join scenario.
           * Nulls in the measure columns are dropped because the metric cannot
             handle null values, and the absolute error computation requires valid
             numeric values in both columns.

   .. rubric:: Example

   ..
       >>> import pandas as pd
       >>> from pyspark.sql import SparkSession
       >>> from tmlt.analytics.metrics import HighRelativeErrorFraction
       >>> spark = SparkSession.builder.getOrCreate()

   >>> dp_df = spark.createDataFrame(
   ...     pd.DataFrame(
   ...         {
   ...             "A": ["a1", "a2", "a3"],
   ...             "X": [50, 110, 100]
   ...         }
   ...     )
   ... )
   >>> dp_outputs = {"O": dp_df}
   >>> baseline_df = spark.createDataFrame(
   ...     pd.DataFrame(
   ...         {
   ...             "A": ["a1", "a2", "a3"],
   ...             "X": [100, 100, 100]
   ...         }
   ...     )
   ... )
   >>> baseline_outputs = {"default": {"O": baseline_df}}

   >>> metric = HighRelativeErrorFraction(
   ...     measure_column="X",
   ...     relative_error_threshold=0.25,
   ...     join_columns=["A"]
   ... )
   >>> metric.relative_error_threshold
   0.25
   >>> metric.join_columns
   ['A']
   >>> result = metric(dp_outputs, baseline_outputs).value
   >>> result
   0.333



   .. list-table:: Properties

      * - :attr:`name`
        - Returns the name of the metric.
      * - :attr:`description`
        - Returns the description of the metric.
      * - :attr:`relative_error_threshold`
        - Returns the relative error threshold.
      * - :attr:`join_columns`
        - Returns the name of the join columns.
      * - :attr:`indicator_column_name`
        - Returns the name of the indicator column.
      * - :attr:`baseline`
        - Return the name of the baseline specified in the constructor (if any).
      * - :attr:`output`
        - Return the name of the output specified in the constructor (if any).
      * - :attr:`func`
        - Returns function to be applied.
      * - :attr:`grouping_columns`
        - Returns the grouping columns.
      * - :attr:`measure_column`
        - Returns the measure column (if any).
      * - :attr:`empty_value`
        - The value this metric will return when inputs are empty.

   .. list-table:: Methods

      * - :meth:`.compute_high_re`
        - Computes quantile relative error value from grouped dataframe.
      * - :meth:`.required_func_parameters`
        - Return the required parameters to the metric function.
      * - :meth:`.check_compatibility_with_outputs`
        - Check that a particular set of outputs is compatible with the metric.
      * - :meth:`.check_join_key_uniqueness`
        - Check if the join keys uniquely identify rows in the joined DataFrame.
      * - :meth:`.get_parameter_values`
        - Returns values for the function's parameters.
      * - :meth:`.metric_function_inputs_empty`
        - Determines if the given inputs are empty.
      * - :meth:`.get_baseline`
        - Returns the name of the single baseline this metric will be applied to.
      * - :meth:`.get_output`
        - Returns the name of the single output the metric will be applied to.
      * - :meth:`.get_column_name_from_result`
        - Returns the result column name from the given result.
      * - :meth:`.get_column_name_from_baselines`
        - Get the result column name for a given set of outputs.
      * - :meth:`.check_compatibility_with_data`
        - Check that the outputs have all the structure the metric expects.
      * - :meth:`.__call__`
        - Computes the given metric on the given DP and baseline outputs.
      * - :meth:`.format_as_summary_row`
        - Return a table row summarizing the metric result.
      * - :meth:`.format_as_dataframe`
        - Returns the results of this metric formatted as a dataframe.
      * - :meth:`.optional_func_parameters`
        - Return the optional parameters to the metric function.
      * - :meth:`.validate_result`
        - Check that the metric result is an allowed type.




   .. py:property:: name
      :type: str

      Returns the name of the metric.

   .. py:property:: description
      :type: str

      Returns the description of the metric.

   .. py:property:: relative_error_threshold
      :type: float

      Returns the relative error threshold.

   .. py:property:: join_columns
      :type: List[str]

      Returns the name of the join columns.

   .. py:property:: indicator_column_name
      :type: Optional[str]

      Returns the name of the indicator column.

   .. py:property:: baseline
      :type: Optional[str]

      Return the name of the baseline specified in the constructor (if any).

   .. py:property:: output
      :type: Optional[str]

      Return the name of the output specified in the constructor (if any).

   .. py:property:: func
      :type: Callable

      Returns function to be applied.

   .. py:property:: grouping_columns
      :type: List[str]

      Returns the grouping columns.

   .. py:property:: measure_column
      :type: Optional[str]

      Returns the measure column (if any).

   .. py:property:: empty_value
      :type: Any

      The value this metric will return when inputs are empty.


   .. automethod:: __init__
   .. py:method:: compute_high_re(joined_output, result_column_name)

      Computes quantile relative error value from grouped dataframe.


   .. py:method:: required_func_parameters()

      Return the required parameters to the metric function.


   .. py:method:: check_compatibility_with_outputs(outputs, output_type)

      Check that a particular set of outputs is compatible with the metric.

      Should throw a ValueError if the metric is not compatible.


   .. py:method:: check_join_key_uniqueness(joined_output)

      Check if the join keys uniquely identify rows in the joined DataFrame.


   .. py:method:: get_parameter_values(dp_outputs, baseline_outputs, unprotected_inputs, program_parameters)

      Returns values for the function's parameters.


   .. py:method:: metric_function_inputs_empty(function_params)

      Determines if the given inputs are empty.


   .. py:method:: get_baseline(baseline_outputs)

      Returns the name of the single baseline this metric will be applied to.


   .. py:method:: get_output(outputs)

      Returns the name of the single output the metric will be applied to.


   .. py:method:: get_column_name_from_result(result)

      Returns the result column name from the given result.


   .. py:method:: get_column_name_from_baselines(baseline_outputs)

      Get the result column name for a given set of outputs.


   .. py:method:: check_compatibility_with_data(dp_outputs, baseline_outputs)

      Check that the outputs have all the structure the metric expects.

      Should throw a ValueError if the metric is not compatible.


   .. py:method:: __call__(dp_outputs, baseline_outputs, unprotected_inputs = None, program_parameters = None)

      Computes the given metric on the given DP and baseline outputs.

      :param dp_outputs: The differentially private outputs of the program.
      :param baseline_outputs: The outputs of the baseline programs.
      :param unprotected_inputs: Optional public dataframes used in error computation.
      :param program_parameters: Optional program specific parameters used in
                                 error computation.


   .. py:method:: format_as_summary_row(result)

      Return a table row summarizing the metric result.


   .. py:method:: format_as_dataframe(result)

      Returns the results of this metric formatted as a dataframe.


   .. py:method:: optional_func_parameters()

      Return the optional parameters to the metric function.


   .. py:method:: validate_result(result, baseline_outputs)

      Check that the metric result is an allowed type.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024

.. TODO(#3272): This prevents setting :canonical: on the copy of various docs
       that appear in the deprecated query_expr module; once that module is removed,
       this logic can go away.


.. py:class:: SpuriousRate(join_columns, *, name = None, description = None, baseline = None, output = None, grouping_columns = None)
   :canonical: tmlt.analytics.metrics._spurious.SpuriousRate


   Bases: :py:obj:`tmlt.analytics.metrics._base.JoinedOutputMetric`

   Computes the fraction of groups in the DP output but not in the baseline output.

   .. note::

       |PRO_NOTE|

   .. note::
       Below, `released` means that the group is in the DP output, and
       `spurious` means that the group is **not** in the baseline output.

   How it works:

   1. The algorithm takes two dictionaries as input to its ``__call__`` method:

     * ``dp_outputs``: A dictionary containing the differentially private (DP) outputs,
       where keys represent output identifiers and values represent corresponding
       DP output. The DP output data is generated by a differentially private
       mechanism.
     * ``baseline_outputs``: A dictionary containing the baseline outputs, where keys
       represent output identifiers and values represent corresponding baseline
       table (baseline).

      Before performing computations, the algorithm checks if the released count of DP
      output (released count) is zero. If so, it returns NaN, indicating that no
      computation can be performed due to the absence of released data. If not, the
      algorithm performs a left anti-join between the DP and baseline tables based on
      ``join_columns``. This returns all rows from the DP output (left dataframe) where
      there is no match in the baseline output (right dataframe). The count of these
      rows is the spurious released count.

   2. After performing the join, the algorithm computes the spurious rate by dividing
      the spurious released count by the total count of released data points
      (released_count), using the formula
      :math:`\text{spurious released count} / \text{released count}`.
      The result represents the proportion of released data points in the DP
      output that have no corresponding data points in the baseline output.

   .. rubric:: Example

   ..
       >>> import pandas as pd
       >>> from pyspark.sql import SparkSession
       >>> from tmlt.analytics.metrics import SpuriousRate
       >>> spark = SparkSession.builder.getOrCreate()

   >>> dp_df = spark.createDataFrame(
   ...     pd.DataFrame(
   ...         {
   ...             "A": ["a1", "a2", "a3", "c"],
   ...             "X": [50, 110, 100, 50]
   ...         }
   ...     )
   ... )
   >>> dp_outputs = {"O": dp_df}
   >>> baseline_df = spark.createDataFrame(
   ...     pd.DataFrame(
   ...         {
   ...             "A": ["a1", "a2", "a3", "b"],
   ...             "X": [100, 100, 100, 50]
   ...         }
   ...     )
   ... )
   >>> baseline_outputs = {"default": {"O": baseline_df}}

   >>> metric = SpuriousRate(
   ...     join_columns=["A"]
   ... )
   >>> metric.join_columns
   ['A']
   >>> metric(dp_outputs, baseline_outputs).value
   0.25



   .. list-table:: Properties

      * - :attr:`join_columns`
        - Returns the name of the join columns.
      * - :attr:`indicator_column_name`
        - Returns the name of the indicator column.
      * - :attr:`baseline`
        - Return the name of the baseline specified in the constructor (if any).
      * - :attr:`output`
        - Return the name of the output specified in the constructor (if any).
      * - :attr:`name`
        - Returns the name of the metric.
      * - :attr:`description`
        - Returns the description of the metric.
      * - :attr:`func`
        - Returns function to be applied.
      * - :attr:`grouping_columns`
        - Returns the grouping columns.
      * - :attr:`measure_column`
        - Returns the measure column (if any).
      * - :attr:`empty_value`
        - The value this metric will return when inputs are empty.

   .. list-table:: Methods

      * - :meth:`.compute_spurious_rate`
        - Computes spurious rate given DP and baseline outputs.
      * - :meth:`.required_func_parameters`
        - Return the required parameters to the metric function.
      * - :meth:`.check_compatibility_with_outputs`
        - Check that a particular set of outputs is compatible with the metric.
      * - :meth:`.check_join_key_uniqueness`
        - Check if the join keys uniquely identify rows in the joined DataFrame.
      * - :meth:`.get_parameter_values`
        - Returns values for the function's parameters.
      * - :meth:`.metric_function_inputs_empty`
        - Determines if the given inputs are empty.
      * - :meth:`.get_baseline`
        - Returns the name of the single baseline this metric will be applied to.
      * - :meth:`.get_output`
        - Returns the name of the single output the metric will be applied to.
      * - :meth:`.get_column_name_from_result`
        - Returns the result column name from the given result.
      * - :meth:`.get_column_name_from_baselines`
        - Get the result column name for a given set of outputs.
      * - :meth:`.check_compatibility_with_data`
        - Check that the outputs have all the structure the metric expects.
      * - :meth:`.__call__`
        - Computes the given metric on the given DP and baseline outputs.
      * - :meth:`.format_as_summary_row`
        - Return a table row summarizing the metric result.
      * - :meth:`.format_as_dataframe`
        - Returns the results of this metric formatted as a dataframe.
      * - :meth:`.optional_func_parameters`
        - Return the optional parameters to the metric function.
      * - :meth:`.validate_result`
        - Check that the metric result is an allowed type.




   .. py:property:: join_columns
      :type: List[str]

      Returns the name of the join columns.

   .. py:property:: indicator_column_name
      :type: Optional[str]

      Returns the name of the indicator column.

   .. py:property:: baseline
      :type: Optional[str]

      Return the name of the baseline specified in the constructor (if any).

   .. py:property:: output
      :type: Optional[str]

      Return the name of the output specified in the constructor (if any).

   .. py:property:: name
      :type: str

      Returns the name of the metric.

   .. py:property:: description
      :type: str

      Returns the description of the metric.

   .. py:property:: func
      :type: Callable

      Returns function to be applied.

   .. py:property:: grouping_columns
      :type: List[str]

      Returns the grouping columns.

   .. py:property:: measure_column
      :type: Optional[str]

      Returns the measure column (if any).

   .. py:property:: empty_value
      :type: Any

      The value this metric will return when inputs are empty.


   .. automethod:: __init__
   .. py:method:: compute_spurious_rate(joined_output, result_column_name)

      Computes spurious rate given DP and baseline outputs.


   .. py:method:: required_func_parameters()

      Return the required parameters to the metric function.


   .. py:method:: check_compatibility_with_outputs(outputs, output_type)

      Check that a particular set of outputs is compatible with the metric.

      Should throw a ValueError if the metric is not compatible.


   .. py:method:: check_join_key_uniqueness(joined_output)

      Check if the join keys uniquely identify rows in the joined DataFrame.


   .. py:method:: get_parameter_values(dp_outputs, baseline_outputs, unprotected_inputs, program_parameters)

      Returns values for the function's parameters.


   .. py:method:: metric_function_inputs_empty(function_params)

      Determines if the given inputs are empty.


   .. py:method:: get_baseline(baseline_outputs)

      Returns the name of the single baseline this metric will be applied to.


   .. py:method:: get_output(outputs)

      Returns the name of the single output the metric will be applied to.


   .. py:method:: get_column_name_from_result(result)

      Returns the result column name from the given result.


   .. py:method:: get_column_name_from_baselines(baseline_outputs)

      Get the result column name for a given set of outputs.


   .. py:method:: check_compatibility_with_data(dp_outputs, baseline_outputs)

      Check that the outputs have all the structure the metric expects.

      Should throw a ValueError if the metric is not compatible.


   .. py:method:: __call__(dp_outputs, baseline_outputs, unprotected_inputs = None, program_parameters = None)

      Computes the given metric on the given DP and baseline outputs.

      :param dp_outputs: The differentially private outputs of the program.
      :param baseline_outputs: The outputs of the baseline programs.
      :param unprotected_inputs: Optional public dataframes used in error computation.
      :param program_parameters: Optional program specific parameters used in
                                 error computation.


   .. py:method:: format_as_summary_row(result)

      Return a table row summarizing the metric result.


   .. py:method:: format_as_dataframe(result)

      Returns the results of this metric formatted as a dataframe.


   .. py:method:: optional_func_parameters()

      Return the optional parameters to the metric function.


   .. py:method:: validate_result(result, baseline_outputs)

      Check that the metric result is an allowed type.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024

.. TODO(#3272): This prevents setting :canonical: on the copy of various docs
       that appear in the deprecated query_expr module; once that module is removed,
       this logic can go away.


.. py:class:: SuppressionRate(join_columns, *, name = None, description = None, baseline = None, output = None, grouping_columns = None)
   :canonical: tmlt.analytics.metrics._suppression.SuppressionRate


   Bases: :py:obj:`tmlt.analytics.metrics._base.JoinedOutputMetric`

   Computes the fraction of groups in the baseline output but not in the DP output.

   .. note::

       |PRO_NOTE|

   .. note::
       Below, `released` means that the group is in the DP output, and
       `spurious` means that the group is **not** in the output of the baseline.

   How it works:

   1. The algorithm takes two dictionaries as input to its ``__call__`` method:

     * ``dp_outputs``: A dictionary containing the differentially private (DP) outputs,
       where keys represent output identifiers and values represent corresponding
       DP output. The DP output data is generated by a differentially private
       mechanism.
     * ``baseline_outputs``: A dictionary containing the baseline outputs, where keys
       represent output identifiers and values represent corresponding baseline
       table (baseline).

      Before performing computations, the algorithm checks if the count of baseline
      output (non-spurious count) is zero. If so, it returns NaN, indicating that
      no computation can be performed due to the absence of non-spurious data in the
      baseline outputs. If not, the algorithm performs a left anti-join between the
      baseline and DP tables based on ``join_columns``. This returns all
      rows from the baseline (left dataframe) where there is no match in the DP
      output (right dataframe). The count of these rows is the non-spurious
      non-released count.

   2. After performing the join, the algorithm computes the suppression rate by
      dividing the non-spurious non-released count by the total count of non-spurious
      data points (non-spurious count), using the formula
      :math:`\text{non-spurious non-released count} / \text{non-spurious count}`.
      The result represents the proportion of non-spurious data points in the baseline
      outputs that are not released in the DP outputs.

   .. rubric:: Example

   ..
       >>> import pandas as pd
       >>> from pyspark.sql import SparkSession
       >>> from tmlt.analytics.metrics import SuppressionRate
       >>> spark = SparkSession.builder.getOrCreate()

   >>> dp_df = spark.createDataFrame(
   ...     pd.DataFrame(
   ...         {
   ...             "A": ["a1", "a2", "a3", "c"],
   ...             "X": [50, 110, 100, 50]
   ...         }
   ...     )
   ... )
   >>> dp_outputs = {"O": dp_df}
   >>> baseline_df = spark.createDataFrame(
   ...     pd.DataFrame(
   ...         {
   ...             "A": ["a1", "a2", "a3", "b"],
   ...             "X": [100, 100, 100, 50]
   ...         }
   ...     )
   ... )
   >>> baseline_outputs = {"default": {"O": baseline_df}}

   >>> metric = SuppressionRate(
   ...     join_columns=["A"]
   ... )
   >>> metric.join_columns
   ['A']
   >>> metric(dp_outputs, baseline_outputs).value
   0.25



   .. list-table:: Properties

      * - :attr:`join_columns`
        - Returns the name of the join columns.
      * - :attr:`indicator_column_name`
        - Returns the name of the indicator column.
      * - :attr:`baseline`
        - Return the name of the baseline specified in the constructor (if any).
      * - :attr:`output`
        - Return the name of the output specified in the constructor (if any).
      * - :attr:`name`
        - Returns the name of the metric.
      * - :attr:`description`
        - Returns the description of the metric.
      * - :attr:`func`
        - Returns function to be applied.
      * - :attr:`grouping_columns`
        - Returns the grouping columns.
      * - :attr:`measure_column`
        - Returns the measure column (if any).
      * - :attr:`empty_value`
        - The value this metric will return when inputs are empty.

   .. list-table:: Methods

      * - :meth:`.compute_suppression_rate`
        - Computes suppression rate given DP and baseline outputs.
      * - :meth:`.required_func_parameters`
        - Return the required parameters to the metric function.
      * - :meth:`.check_compatibility_with_outputs`
        - Check that a particular set of outputs is compatible with the metric.
      * - :meth:`.check_join_key_uniqueness`
        - Check if the join keys uniquely identify rows in the joined DataFrame.
      * - :meth:`.get_parameter_values`
        - Returns values for the function's parameters.
      * - :meth:`.metric_function_inputs_empty`
        - Determines if the given inputs are empty.
      * - :meth:`.get_baseline`
        - Returns the name of the single baseline this metric will be applied to.
      * - :meth:`.get_output`
        - Returns the name of the single output the metric will be applied to.
      * - :meth:`.get_column_name_from_result`
        - Returns the result column name from the given result.
      * - :meth:`.get_column_name_from_baselines`
        - Get the result column name for a given set of outputs.
      * - :meth:`.check_compatibility_with_data`
        - Check that the outputs have all the structure the metric expects.
      * - :meth:`.__call__`
        - Computes the given metric on the given DP and baseline outputs.
      * - :meth:`.format_as_summary_row`
        - Return a table row summarizing the metric result.
      * - :meth:`.format_as_dataframe`
        - Returns the results of this metric formatted as a dataframe.
      * - :meth:`.optional_func_parameters`
        - Return the optional parameters to the metric function.
      * - :meth:`.validate_result`
        - Check that the metric result is an allowed type.




   .. py:property:: join_columns
      :type: List[str]

      Returns the name of the join columns.

   .. py:property:: indicator_column_name
      :type: Optional[str]

      Returns the name of the indicator column.

   .. py:property:: baseline
      :type: Optional[str]

      Return the name of the baseline specified in the constructor (if any).

   .. py:property:: output
      :type: Optional[str]

      Return the name of the output specified in the constructor (if any).

   .. py:property:: name
      :type: str

      Returns the name of the metric.

   .. py:property:: description
      :type: str

      Returns the description of the metric.

   .. py:property:: func
      :type: Callable

      Returns function to be applied.

   .. py:property:: grouping_columns
      :type: List[str]

      Returns the grouping columns.

   .. py:property:: measure_column
      :type: Optional[str]

      Returns the measure column (if any).

   .. py:property:: empty_value
      :type: Any

      The value this metric will return when inputs are empty.


   .. automethod:: __init__
   .. py:method:: compute_suppression_rate(joined_output, result_column_name)

      Computes suppression rate given DP and baseline outputs.


   .. py:method:: required_func_parameters()

      Return the required parameters to the metric function.


   .. py:method:: check_compatibility_with_outputs(outputs, output_type)

      Check that a particular set of outputs is compatible with the metric.

      Should throw a ValueError if the metric is not compatible.


   .. py:method:: check_join_key_uniqueness(joined_output)

      Check if the join keys uniquely identify rows in the joined DataFrame.


   .. py:method:: get_parameter_values(dp_outputs, baseline_outputs, unprotected_inputs, program_parameters)

      Returns values for the function's parameters.


   .. py:method:: metric_function_inputs_empty(function_params)

      Determines if the given inputs are empty.


   .. py:method:: get_baseline(baseline_outputs)

      Returns the name of the single baseline this metric will be applied to.


   .. py:method:: get_output(outputs)

      Returns the name of the single output the metric will be applied to.


   .. py:method:: get_column_name_from_result(result)

      Returns the result column name from the given result.


   .. py:method:: get_column_name_from_baselines(baseline_outputs)

      Get the result column name for a given set of outputs.


   .. py:method:: check_compatibility_with_data(dp_outputs, baseline_outputs)

      Check that the outputs have all the structure the metric expects.

      Should throw a ValueError if the metric is not compatible.


   .. py:method:: __call__(dp_outputs, baseline_outputs, unprotected_inputs = None, program_parameters = None)

      Computes the given metric on the given DP and baseline outputs.

      :param dp_outputs: The differentially private outputs of the program.
      :param baseline_outputs: The outputs of the baseline programs.
      :param unprotected_inputs: Optional public dataframes used in error computation.
      :param program_parameters: Optional program specific parameters used in
                                 error computation.


   .. py:method:: format_as_summary_row(result)

      Return a table row summarizing the metric result.


   .. py:method:: format_as_dataframe(result)

      Returns the results of this metric formatted as a dataframe.


   .. py:method:: optional_func_parameters()

      Return the optional parameters to the metric function.


   .. py:method:: validate_result(result, baseline_outputs)

      Check that the metric result is an allowed type.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024

.. TODO(#3272): This prevents setting :canonical: on the copy of various docs
       that appear in the deprecated query_expr module; once that module is removed,
       this logic can go away.


.. py:class:: Metric(name, func, description = None, grouping_columns = None, measure_column = None, empty_value = None)
   :canonical: tmlt.analytics.metrics._base.Metric


   A generic metric defined using a function.

   .. note::

       |PRO_NOTE|

   .. rubric:: Example

   ..
       >>> import pandas as pd
       >>> from pyspark.sql import SparkSession
       >>> from tmlt.analytics.metrics import Metric
       >>> spark = SparkSession.builder.getOrCreate()

   >>> dp_df = spark.createDataFrame(pd.DataFrame({"A": [5]}))
   >>> dp_outputs = {"O": dp_df}
   >>> baseline_df1 = spark.createDataFrame(pd.DataFrame({"A": [5]}))
   >>> baseline_df2 = spark.createDataFrame(pd.DataFrame({"A": [6]}))
   >>> baseline_outputs = {
   ...    "baseline1": {"O": baseline_df1}, "baseline2": {"O": baseline_df2}
   ... }
   >>> def size_difference(dp_outputs, baseline_outputs):
   ...     baseline_count = baseline_outputs["baseline1"]["O"].count()
   ...     return abs(baseline_count - dp_outputs["O"].count())

   >>> metric = Metric(
   ...     func=size_difference,
   ...     name="Custom Metric",
   ...     description="Custom Description",
   ... )
   >>> result = metric(dp_outputs, baseline_outputs)
   >>> result.value
   0



   .. list-table:: Properties

      * - :attr:`name`
        - Returns the name of the metric.
      * - :attr:`description`
        - Returns the description of the metric.
      * - :attr:`func`
        - Returns function to be applied.
      * - :attr:`grouping_columns`
        - Returns the grouping columns.
      * - :attr:`measure_column`
        - Returns the measure column (if any).
      * - :attr:`empty_value`
        - The value this metric will return when inputs are empty.

   .. list-table:: Methods

      * - :meth:`.format_as_summary_row`
        - Return a table row summarizing the metric result.
      * - :meth:`.get_column_name_from_result`
        - Returns the result column name from the given result.
      * - :meth:`.format_as_dataframe`
        - Returns the results of this metric formatted as a dataframe.
      * - :meth:`.required_func_parameters`
        - Return the required parameters to the metric function.
      * - :meth:`.optional_func_parameters`
        - Return the optional parameters to the metric function.
      * - :meth:`.check_compatibility_with_data`
        - Check that the outputs have all the structure the metric expects.
      * - :meth:`.get_column_name_from_baselines`
        - Get the result column name for a given set of outputs.
      * - :meth:`.get_parameter_values`
        - Returns values for the function's parameters.
      * - :meth:`.validate_result`
        - Check that the metric result is an allowed type.
      * - :meth:`.metric_function_inputs_empty`
        - Determines if the inputs to the metric function are empty.
      * - :meth:`.__call__`
        - Computes the given metric on the given DP and baseline outputs.




   .. py:property:: name
      :type: str

      Returns the name of the metric.

   .. py:property:: description
      :type: str

      Returns the description of the metric.

   .. py:property:: func
      :type: Callable

      Returns function to be applied.

   .. py:property:: grouping_columns
      :type: List[str]

      Returns the grouping columns.

   .. py:property:: measure_column
      :type: Optional[str]

      Returns the measure column (if any).

   .. py:property:: empty_value
      :type: Any

      The value this metric will return when inputs are empty.


   .. automethod:: __init__
   .. py:method:: format_as_summary_row(result)

      Return a table row summarizing the metric result.


   .. py:method:: get_column_name_from_result(result)

      Returns the result column name from the given result.


   .. py:method:: format_as_dataframe(result)

      Returns the results of this metric formatted as a dataframe.


   .. py:method:: required_func_parameters()

      Return the required parameters to the metric function.


   .. py:method:: optional_func_parameters()

      Return the optional parameters to the metric function.


   .. py:method:: check_compatibility_with_data(dp_outputs, baseline_outputs)

      Check that the outputs have all the structure the metric expects.

      Should throw a ValueError if the metric is not compatible.


   .. py:method:: get_column_name_from_baselines(baseline_outputs)

      Get the result column name for a given set of outputs.


   .. py:method:: get_parameter_values(dp_outputs, baseline_outputs, unprotected_inputs, program_parameters)

      Returns values for the function's parameters.


   .. py:method:: validate_result(result, baseline_outputs)

      Check that the metric result is an allowed type.


   .. py:method:: metric_function_inputs_empty(function_params)

      Determines if the inputs to the metric function are empty.


   .. py:method:: __call__(dp_outputs, baseline_outputs, unprotected_inputs = None, program_parameters = None)

      Computes the given metric on the given DP and baseline outputs.

      :param dp_outputs: The differentially private outputs of the program.
      :param baseline_outputs: The outputs of the baseline programs.
      :param unprotected_inputs: Optional public dataframes used in error computation.
      :param program_parameters: Optional program specific parameters used in
                                 error computation.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024

.. TODO(#3272): This prevents setting :canonical: on the copy of various docs
       that appear in the deprecated query_expr module; once that module is removed,
       this logic can go away.


.. py:class:: SingleOutputMetric(name, func, description = None, baseline = None, output = None, grouping_columns = None, measure_column = None, empty_value = None)
   :canonical: tmlt.analytics.metrics._base.SingleOutputMetric


   Bases: :py:obj:`Metric`

   A metric computed from a single output table, defined using a function.

   Applies to a single baseline.

   .. note::

       |PRO_NOTE|

   .. rubric:: Example

   ..
       >>> import pandas as pd
       >>> from pyspark.sql import SparkSession
       >>> from tmlt.analytics.metrics import SingleOutputMetric
       >>> spark = SparkSession.builder.getOrCreate()

   >>> dp_df = spark.createDataFrame(pd.DataFrame({"A": [5]}))
   >>> dp_outputs = {"O": dp_df}
   >>> baseline_df = spark.createDataFrame(pd.DataFrame({"A": [5]}))
   >>> baseline_outputs = {"default": {"O": baseline_df}}

   >>> def size_difference(dp_output: DataFrame, baseline_output: DataFrame):
   ...     return baseline_output.count() - dp_output.count()

   >>> metric = SingleOutputMetric(
   ...     func=size_difference,
   ...     name="Output size difference",
   ...     description="Difference in number of rows.",
   ... )
   >>> result = metric(dp_outputs, baseline_outputs).value
   >>> result
   0



   .. list-table:: Properties

      * - :attr:`baseline`
        - Return the name of the baseline specified in the constructor (if any).
      * - :attr:`output`
        - Return the name of the output specified in the constructor (if any).
      * - :attr:`name`
        - Returns the name of the metric.
      * - :attr:`description`
        - Returns the description of the metric.
      * - :attr:`func`
        - Returns function to be applied.
      * - :attr:`grouping_columns`
        - Returns the grouping columns.
      * - :attr:`measure_column`
        - Returns the measure column (if any).
      * - :attr:`empty_value`
        - The value this metric will return when inputs are empty.

   .. list-table:: Methods

      * - :meth:`.get_baseline`
        - Returns the name of the single baseline this metric will be applied to.
      * - :meth:`.get_output`
        - Returns the name of the single output the metric will be applied to.
      * - :meth:`.get_column_name_from_result`
        - Returns the result column name from the given result.
      * - :meth:`.get_column_name_from_baselines`
        - Get the result column name for a given set of outputs.
      * - :meth:`.required_func_parameters`
        - Return the required parameters to the metric function.
      * - :meth:`.check_compatibility_with_outputs`
        - Check that a particular output is compatible with the metric.
      * - :meth:`.check_compatibility_with_data`
        - Check that the outputs have all the structure the metric expects.
      * - :meth:`.get_parameter_values`
        - Returns values for the function's parameters.
      * - :meth:`.metric_function_inputs_empty`
        - Determines if the inputs to the metric function are empty.
      * - :meth:`.__call__`
        - Computes the given metric on the given DP and baseline outputs.
      * - :meth:`.format_as_summary_row`
        - Return a table row summarizing the metric result.
      * - :meth:`.format_as_dataframe`
        - Returns the results of this metric formatted as a dataframe.
      * - :meth:`.optional_func_parameters`
        - Return the optional parameters to the metric function.
      * - :meth:`.validate_result`
        - Check that the metric result is an allowed type.




   .. py:property:: baseline
      :type: Optional[str]

      Return the name of the baseline specified in the constructor (if any).

   .. py:property:: output
      :type: Optional[str]

      Return the name of the output specified in the constructor (if any).

   .. py:property:: name
      :type: str

      Returns the name of the metric.

   .. py:property:: description
      :type: str

      Returns the description of the metric.

   .. py:property:: func
      :type: Callable

      Returns function to be applied.

   .. py:property:: grouping_columns
      :type: List[str]

      Returns the grouping columns.

   .. py:property:: measure_column
      :type: Optional[str]

      Returns the measure column (if any).

   .. py:property:: empty_value
      :type: Any

      The value this metric will return when inputs are empty.


   .. automethod:: __init__
   .. py:method:: get_baseline(baseline_outputs)

      Returns the name of the single baseline this metric will be applied to.


   .. py:method:: get_output(outputs)

      Returns the name of the single output the metric will be applied to.


   .. py:method:: get_column_name_from_result(result)

      Returns the result column name from the given result.


   .. py:method:: get_column_name_from_baselines(baseline_outputs)

      Get the result column name for a given set of outputs.


   .. py:method:: required_func_parameters()

      Return the required parameters to the metric function.


   .. py:method:: check_compatibility_with_outputs(outputs, output_type)

      Check that a particular output is compatible with the metric.

      Should throw a ValueError if the metric is not compatible.


   .. py:method:: check_compatibility_with_data(dp_outputs, baseline_outputs)

      Check that the outputs have all the structure the metric expects.

      Should throw a ValueError if the metric is not compatible.


   .. py:method:: get_parameter_values(dp_outputs, baseline_outputs, unprotected_inputs, program_parameters)

      Returns values for the function's parameters.


   .. py:method:: metric_function_inputs_empty(function_params)

      Determines if the inputs to the metric function are empty.


   .. py:method:: __call__(dp_outputs, baseline_outputs, unprotected_inputs = None, program_parameters = None)

      Computes the given metric on the given DP and baseline outputs.

      :param dp_outputs: The differentially private outputs of the program.
      :param baseline_outputs: The outputs of the baseline programs.
      :param unprotected_inputs: Optional public dataframes used in error computation.
      :param program_parameters: Optional program specific parameters used in
                                 error computation.


   .. py:method:: format_as_summary_row(result)

      Return a table row summarizing the metric result.


   .. py:method:: format_as_dataframe(result)

      Returns the results of this metric formatted as a dataframe.


   .. py:method:: optional_func_parameters()

      Return the optional parameters to the metric function.


   .. py:method:: validate_result(result, baseline_outputs)

      Check that the metric result is an allowed type.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024

.. TODO(#3272): This prevents setting :canonical: on the copy of various docs
       that appear in the deprecated query_expr module; once that module is removed,
       this logic can go away.


.. py:class:: JoinedOutputMetric(name, func, join_columns, description = None, baseline = None, output = None, grouping_columns = None, measure_column = None, empty_value = None, join_how = 'inner', dropna_columns = None, indicator_column_name = None)
   :canonical: tmlt.analytics.metrics._base.JoinedOutputMetric


   Bases: :py:obj:`SingleOutputMetric`

   A metric computed from a join between a single DP and baseline output.

   Defined using a function.

   .. note::

       |PRO_NOTE|

   Subclasses of ``JoinedOutputMetric`` define a
   ``compute_on_joined_output`` method which takes in a single dataframe, the
   result of joining the specified table from the DP and baseline outputs on
   the given list of columns, and returns the metric value. The joined table is
   the result of performing a join (default inner join) between the DP and baseline
   tables on the given join columns.

   .. rubric:: Example

   ..
       >>> import pandas as pd
       >>> import pyspark.sql.functions as sf
       >>> from pyspark.sql.functions import col
       >>> from pyspark.sql import SparkSession, GroupedData
       >>> from tmlt.analytics.metrics import JoinedOutputMetric
       >>> spark = SparkSession.builder.getOrCreate()

   >>> dp_df = spark.createDataFrame(pd.DataFrame([{"A": 1, "B": "a"}]))
   >>> dp_outputs = {"O": dp_df}
   >>> baseline_df = spark.createDataFrame(pd.DataFrame([{"A": 5}]))
   >>> baseline_outputs = {"default": {"O": baseline_df}}

   >>> def size_difference(joined_output: DataFrame,
   ...                     result_column_name: str):
   ...     in_dp = (col("indicator") == "both") | (col("indicator") == "dp")
   ...     in_baseline = ((col("indicator") == "both") |
   ...          (col("indicator") == "baseline"))
   ...     dp_count = sf.sum(sf.when(in_dp, sf.lit(1)).otherwise(0))
   ...     baseline_count = sf.sum(sf.when(in_baseline, sf.lit(1)).otherwise(0))
   ...     size_difference = joined_output.agg(
   ...         sf.abs(dp_count - baseline_count).alias(result_column_name)
   ...     )
   ...     return size_difference.head(1)[0][result_column_name]

   >>> metric = JoinedOutputMetric(
   ...     func=size_difference,
   ...     name="Output size difference",
   ...     description="Difference in number of rows.",
   ...     join_columns=["A"],
   ...     join_how="outer",
   ...     indicator_column_name="indicator",
   ... )
   >>> result = metric(dp_outputs, baseline_outputs).value
   >>> result
   0



   .. list-table:: Properties

      * - :attr:`join_columns`
        - Returns the name of the join columns.
      * - :attr:`indicator_column_name`
        - Returns the name of the indicator column.
      * - :attr:`baseline`
        - Return the name of the baseline specified in the constructor (if any).
      * - :attr:`output`
        - Return the name of the output specified in the constructor (if any).
      * - :attr:`name`
        - Returns the name of the metric.
      * - :attr:`description`
        - Returns the description of the metric.
      * - :attr:`func`
        - Returns function to be applied.
      * - :attr:`grouping_columns`
        - Returns the grouping columns.
      * - :attr:`measure_column`
        - Returns the measure column (if any).
      * - :attr:`empty_value`
        - The value this metric will return when inputs are empty.

   .. list-table:: Methods

      * - :meth:`.required_func_parameters`
        - Return the required parameters to the metric function.
      * - :meth:`.check_compatibility_with_outputs`
        - Check that a particular set of outputs is compatible with the metric.
      * - :meth:`.check_join_key_uniqueness`
        - Check if the join keys uniquely identify rows in the joined DataFrame.
      * - :meth:`.get_parameter_values`
        - Returns values for the function's parameters.
      * - :meth:`.metric_function_inputs_empty`
        - Determines if the given inputs are empty.
      * - :meth:`.get_baseline`
        - Returns the name of the single baseline this metric will be applied to.
      * - :meth:`.get_output`
        - Returns the name of the single output the metric will be applied to.
      * - :meth:`.get_column_name_from_result`
        - Returns the result column name from the given result.
      * - :meth:`.get_column_name_from_baselines`
        - Get the result column name for a given set of outputs.
      * - :meth:`.check_compatibility_with_data`
        - Check that the outputs have all the structure the metric expects.
      * - :meth:`.__call__`
        - Computes the given metric on the given DP and baseline outputs.
      * - :meth:`.format_as_summary_row`
        - Return a table row summarizing the metric result.
      * - :meth:`.format_as_dataframe`
        - Returns the results of this metric formatted as a dataframe.
      * - :meth:`.optional_func_parameters`
        - Return the optional parameters to the metric function.
      * - :meth:`.validate_result`
        - Check that the metric result is an allowed type.




   .. py:property:: join_columns
      :type: List[str]

      Returns the name of the join columns.

   .. py:property:: indicator_column_name
      :type: Optional[str]

      Returns the name of the indicator column.

   .. py:property:: baseline
      :type: Optional[str]

      Return the name of the baseline specified in the constructor (if any).

   .. py:property:: output
      :type: Optional[str]

      Return the name of the output specified in the constructor (if any).

   .. py:property:: name
      :type: str

      Returns the name of the metric.

   .. py:property:: description
      :type: str

      Returns the description of the metric.

   .. py:property:: func
      :type: Callable

      Returns function to be applied.

   .. py:property:: grouping_columns
      :type: List[str]

      Returns the grouping columns.

   .. py:property:: measure_column
      :type: Optional[str]

      Returns the measure column (if any).

   .. py:property:: empty_value
      :type: Any

      The value this metric will return when inputs are empty.


   .. automethod:: __init__
   .. py:method:: required_func_parameters()

      Return the required parameters to the metric function.


   .. py:method:: check_compatibility_with_outputs(outputs, output_type)

      Check that a particular set of outputs is compatible with the metric.

      Should throw a ValueError if the metric is not compatible.


   .. py:method:: check_join_key_uniqueness(joined_output)

      Check if the join keys uniquely identify rows in the joined DataFrame.


   .. py:method:: get_parameter_values(dp_outputs, baseline_outputs, unprotected_inputs, program_parameters)

      Returns values for the function's parameters.


   .. py:method:: metric_function_inputs_empty(function_params)

      Determines if the given inputs are empty.


   .. py:method:: get_baseline(baseline_outputs)

      Returns the name of the single baseline this metric will be applied to.


   .. py:method:: get_output(outputs)

      Returns the name of the single output the metric will be applied to.


   .. py:method:: get_column_name_from_result(result)

      Returns the result column name from the given result.


   .. py:method:: get_column_name_from_baselines(baseline_outputs)

      Get the result column name for a given set of outputs.


   .. py:method:: check_compatibility_with_data(dp_outputs, baseline_outputs)

      Check that the outputs have all the structure the metric expects.

      Should throw a ValueError if the metric is not compatible.


   .. py:method:: __call__(dp_outputs, baseline_outputs, unprotected_inputs = None, program_parameters = None)

      Computes the given metric on the given DP and baseline outputs.

      :param dp_outputs: The differentially private outputs of the program.
      :param baseline_outputs: The outputs of the baseline programs.
      :param unprotected_inputs: Optional public dataframes used in error computation.
      :param program_parameters: Optional program specific parameters used in
                                 error computation.


   .. py:method:: format_as_summary_row(result)

      Return a table row summarizing the metric result.


   .. py:method:: format_as_dataframe(result)

      Returns the results of this metric formatted as a dataframe.


   .. py:method:: optional_func_parameters()

      Return the optional parameters to the metric function.


   .. py:method:: validate_result(result, baseline_outputs)

      Check that the metric result is an allowed type.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024

.. TODO(#3272): This prevents setting :canonical: on the copy of various docs
       that appear in the deprecated query_expr module; once that module is removed,
       this logic can go away.


.. py:class:: MetricResult
   :canonical: tmlt.analytics.metrics._base.MetricResult


   An output of a Metric with additional metadata.

   .. note::

       💡 |PRO_NOTE|





   .. py:attribute:: name
      :type:  str

      The name of the metric.

   .. py:attribute:: description
      :type:  str

      The description of the metric.

   .. py:attribute:: baseline
      :type:  Union[str, List[str]]

      The name of the baseline program(s) used to calculate this metric.

   .. py:attribute:: output
      :type:  Union[str, List[str]]

      The name of the program output(s) used to calculate this metric.

   .. py:attribute:: metric
      :type:  tmlt.analytics.metrics.Metric

      The metric that was used.

   .. py:attribute:: value
      :type:  Any

      The value of the metric applied to the program outputs.



   .. py:method:: format_as_summary_row()

      Return a table row summarizing the metric result.


   .. py:method:: format_as_dataframe()

      Returns the results of this metric formatted as a dataframe.


   .. py:method:: result_column_name()

      Returns the name of the column containing the metric results.

      Only relevant if value is a DataFrame.







